--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,9 @@
   min-height: 56px;
   background-color: #fff;
 }
-
+.anime{
+  opacity:0;
+}
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
@@ -168,16 +170,13 @@
 }
 
 .abs p {
-  margin-bottom: 8rem;
+  margin-bottom: 5%;
 }
 .exps{
   margin: 15px 0;
   text-transform: none;
 }
 
-.exps h3{
-  padding-bottom: 10vh;
-}
 .languages{
   padding-top: 60vh;
   background-image: url("../img/bkg2.jpg");
@@ -193,10 +192,10 @@
   width: 30%;
 }
 
-.projects-section {
-  padding: 10rem 0;
-}
-
+/*.projects-section {
+*  padding: 10rem 0;
+*}
+*/
 .projects-section .featured-text {
   padding: 2rem;
 }
@@ -250,10 +249,51 @@ a:focus, a:hover {
   color: #64a19d !important;
 }
 
-footer {
-  padding: 5rem 0;
+
+
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  /*height: 300px;*/
 }
 
+/* Taller footer on small screens */
+@media (max-width: 34em) {
+    body {
+      margin-bottom: 500px;
+    }
+    .footer {
+      height: 500px;
+    }
+}
+footer {
+  padding-top: 30px;
+  background-color: #292c2f;
+  color: #bbb;
+}
+
+footer a {
+  color: #999;
+  text-decoration:none;
+}
+
+footer a:hover, footer a:focus {
+  color: #aaa;
+  text-decoration:none;
+  border-bottom:1px dotted #999;
+}
+
+footer .form-control {
+    background-color: #1f2022;
+    box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
+    border: none;
+    resize: none;
+    color: #d1d2d2;
+    padding: 0.7em 1em;
+}
 #portfolio .container-fluid {
   max-width: 1920px;
 
@@ -289,3 +329,25 @@ footer {
   transition: opacity 0.25s ease;
   text-align: center;
 } 
+
+.progress {
+  height: 35px;
+
+}
+.progress .skill {
+  font: normal 12px "Open Sans Web";
+  line-height: 35px;
+  padding: 0;
+  margin: 0 0 0 20px;
+  text-transform: uppercase;
+}
+.progress .skill .val {
+  float: right;
+  font-style: normal;
+  margin: 0 20px 0 0;
+}
+
+.progress-bar {
+  text-align: left;
+  transition-duration: 3s;
+}
